--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "0                  81.88         74.98%            85.81%            65.17%  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
        "Wright High School               90.33%  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 79,
    "metadata": {
     "scrolled": true
    },
@@ -844,7 +844,7 @@
        "Pena High School               90.54%  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 80,
    "metadata": {
     "scrolled": true
    },
@@ -1002,7 +1002,7 @@
        "Johnson High School              53.54%  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
        "Wright High School         83.26       84.01       83.84       83.64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
        "Wright High School         83.83       83.81       84.16       84.07"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,12 +1443,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>School ID</th>\n",
+       "      <th>size</th>\n",
+       "      <th>budget</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;$585</th>\n",
+       "      <td>18925.615578</td>\n",
+       "      <td>83.964039</td>\n",
+       "      <td>83.363065</td>\n",
+       "      <td>6.906250</td>\n",
+       "      <td>1898.018530</td>\n",
+       "      <td>1.101853e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$585-$629</th>\n",
+       "      <td>16920.783790</td>\n",
+       "      <td>82.312643</td>\n",
+       "      <td>79.982873</td>\n",
+       "      <td>5.768954</td>\n",
+       "      <td>3375.386168</td>\n",
+       "      <td>2.107647e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$630-$644</th>\n",
+       "      <td>25333.198993</td>\n",
+       "      <td>81.301007</td>\n",
+       "      <td>77.821056</td>\n",
+       "      <td>9.312401</td>\n",
+       "      <td>3079.310016</td>\n",
+       "      <td>1.967931e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>&gt;$645</th>\n",
+       "      <td>16622.369934</td>\n",
+       "      <td>81.005604</td>\n",
+       "      <td>77.049297</td>\n",
+       "      <td>5.769268</td>\n",
+       "      <td>4276.718509</td>\n",
+       "      <td>2.786812e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Student ID  reading_score  math_score  School ID  \\\n",
+       "Per Student Budget                                                       \n",
+       "<$585               18925.615578      83.964039   83.363065   6.906250   \n",
+       "$585-$629           16920.783790      82.312643   79.982873   5.768954   \n",
+       "$630-$644           25333.198993      81.301007   77.821056   9.312401   \n",
+       ">$645               16622.369934      81.005604   77.049297   5.769268   \n",
+       "\n",
+       "                           size        budget  \n",
+       "Per Student Budget                             \n",
+       "<$585               1898.018530  1.101853e+06  \n",
+       "$585-$629           3375.386168  2.107647e+06  \n",
+       "$630-$644           3079.310016  1.967931e+06  \n",
+       ">$645               4276.718509  2.786812e+06  "
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "spending_bins = [0, 595, 625, 655, 675]\n",
-    "bin_names = [\"<$595\", \"\"]\n"
+    "#sample bins \n",
+    "bins = [0, 585, 630, 645, 680]\n",
+    "bin_names = [\"<$585\", \"$585-$629\", \"$630-$644\", \">$645\"]\n",
+    "\n",
+    "school_data_complete[\"Per Student Budget\"] = pd.cut(school_data_complete[\"budget\"]/school_data_complete[\"size\"], bins, labels=bin_names)\n",
+    "\n",
+    "spending_grouped = school_data_complete.groupby(\"Per Student Budget\").mean()\n",
+    "\n",
+    "\n",
+    "spending_grouped"
    ]
   },
   {
