--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1467,16 +1467,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Student ID</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>School ID</th>\n",
-       "      <th>size</th>\n",
-       "      <th>budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>Overall Passing Rate</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Per Student Budget</th>\n",
-       "      <th></th>\n",
+       "      <th>spending_bins</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1487,76 +1485,91 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>&lt;$585</th>\n",
-       "      <td>18925.615578</td>\n",
-       "      <td>83.964039</td>\n",
-       "      <td>83.363065</td>\n",
-       "      <td>6.906250</td>\n",
-       "      <td>1898.018530</td>\n",
-       "      <td>1.101853e+06</td>\n",
+       "      <td>79.554073</td>\n",
+       "      <td>82.145823</td>\n",
+       "      <td>1491.75</td>\n",
+       "      <td>1539.25</td>\n",
+       "      <td>1443.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>$585-$629</th>\n",
-       "      <td>16920.783790</td>\n",
-       "      <td>82.312643</td>\n",
-       "      <td>79.982873</td>\n",
-       "      <td>5.768954</td>\n",
-       "      <td>3375.386168</td>\n",
-       "      <td>2.107647e+06</td>\n",
+       "      <th>$585 - $614</th>\n",
+       "      <td>79.554073</td>\n",
+       "      <td>82.145823</td>\n",
+       "      <td>640.75</td>\n",
+       "      <td>652.75</td>\n",
+       "      <td>613.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>$630-$644</th>\n",
-       "      <td>25333.198993</td>\n",
-       "      <td>81.301007</td>\n",
-       "      <td>77.821056</td>\n",
-       "      <td>9.312401</td>\n",
-       "      <td>3079.310016</td>\n",
-       "      <td>1.967931e+06</td>\n",
+       "      <th>$615 - $644</th>\n",
+       "      <td>79.554073</td>\n",
+       "      <td>82.145823</td>\n",
+       "      <td>3171.25</td>\n",
+       "      <td>3713.75</td>\n",
+       "      <td>2677.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>&gt;$645</th>\n",
-       "      <td>16622.369934</td>\n",
-       "      <td>81.005604</td>\n",
-       "      <td>77.049297</td>\n",
-       "      <td>5.769268</td>\n",
-       "      <td>4276.718509</td>\n",
-       "      <td>2.786812e+06</td>\n",
+       "      <th>&gt;$644</th>\n",
+       "      <td>79.554073</td>\n",
+       "      <td>82.145823</td>\n",
+       "      <td>2038.75</td>\n",
+       "      <td>2496.75</td>\n",
+       "      <td>1647.75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      Student ID  reading_score  math_score  School ID  \\\n",
-       "Per Student Budget                                                       \n",
-       "<$585               18925.615578      83.964039   83.363065   6.906250   \n",
-       "$585-$629           16920.783790      82.312643   79.982873   5.768954   \n",
-       "$630-$644           25333.198993      81.301007   77.821056   9.312401   \n",
-       ">$645               16622.369934      81.005604   77.049297   5.769268   \n",
+       "               Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "spending_bins                                                              \n",
+       "<$585                   79.554073              82.145823         1491.75   \n",
+       "$585 - $614             79.554073              82.145823          640.75   \n",
+       "$615 - $644             79.554073              82.145823         3171.25   \n",
+       ">$644                   79.554073              82.145823         2038.75   \n",
        "\n",
-       "                           size        budget  \n",
-       "Per Student Budget                             \n",
-       "<$585               1898.018530  1.101853e+06  \n",
-       "$585-$629           3375.386168  2.107647e+06  \n",
-       "$630-$644           3079.310016  1.967931e+06  \n",
-       ">$645               4276.718509  2.786812e+06  "
+       "               % Passing Reading  Overall Passing Rate  \n",
+       "spending_bins                                           \n",
+       "<$585                    1539.25               1443.00  \n",
+       "$585 - $614               652.75                613.50  \n",
+       "$615 - $644              3713.75               2677.75  \n",
+       ">$644                    2496.75               1647.75  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#sample bins \n",
+    "#bins for spending  \n",
     "bins = [0, 585, 630, 645, 680]\n",
     "bin_names = [\"<$585\", \"$585-$629\", \"$630-$644\", \">$645\"]\n",
-    "\n",
-    "school_data_complete[\"Per Student Budget\"] = pd.cut(school_data_complete[\"budget\"]/school_data_complete[\"size\"], bins, labels=bin_names)\n",
-    "\n",
-    "spending_grouped = school_data_complete.groupby(\"Per Student Budget\").mean()\n",
+    "school_data_complete['Spending Ranges (Per Student)'] = pd.cut(school_data_complete['budget']/school_data_complete['size'], bins, labels = bin_names)\n",
     "\n",
     "\n",
-    "spending_grouped"
+    "#grouping by spending \n",
+    "spending_grouped = school_data_complete.groupby(\"Spending Ranges (Per Student)\").mean()\n",
+    "\n",
+    "\n",
+    "average_math = spending_grouped[\"math_score\"].mean()\n",
+    "average_reading = spending_grouped[\"reading_score\"].mean()\n",
+    "percent_pass_math = school_data_complete[school_data_complete[\"math_score\"]>= 70].groupby(\"spending_bins\")[\"Student ID\"].count()/spending_grouped[\"Student ID\"].count()\n",
+    "percent_pass_rdg = school_data_complete[school_data_complete[\"reading_score\"]>= 70].groupby(\"spending_bins\")[\"Student ID\"].count()/spending_grouped[\"Student ID\"].count()\n",
+    "percent_overall = school_data_complete[(school_data_complete[\"math_score\"]>= 70) & (school_data_complete[\"reading_score\"]>= 70)].groupby(\"spending_bins\")[\"Student ID\"].count()/spending_grouped[\"Student ID\"].count()\n",
+    "\n",
+    "scores_spending = pd.DataFrame({\n",
+    "    \"Average Math Score\": average_math, \n",
+    "    \"Average Reading Score\": average_reading, \n",
+    "    \"% Passing Math\": percent_pass_math, \n",
+    "    \"% Passing Reading\": percent_pass_rdg, \n",
+    "    \"Overall Passing Rate\": percent_overall\n",
+    "})\n",
+    "\n",
+    "#scores_spending.index.name = \"Per Student Budget\"\n",
+    "#scores_spending = scores_spending.reindex(bin_names)\n",
+    "\n",
+    "\n",
+    "scores_spending"
    ]
   },
   {
