--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1474,7 @@
        "      <th>Overall Passing Rate</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>spending_bins</th>\n",
+       "      <th>Per Student Budget</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1485,57 +1485,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>&lt;$585</th>\n",
-       "      <td>79.554073</td>\n",
-       "      <td>82.145823</td>\n",
-       "      <td>1491.75</td>\n",
-       "      <td>1539.25</td>\n",
-       "      <td>1443.00</td>\n",
+       "      <td>83.36</td>\n",
+       "      <td>83.96</td>\n",
+       "      <td>93.70%</td>\n",
+       "      <td>96.69%</td>\n",
+       "      <td>90.64%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>$585 - $614</th>\n",
-       "      <td>79.554073</td>\n",
-       "      <td>82.145823</td>\n",
-       "      <td>640.75</td>\n",
-       "      <td>652.75</td>\n",
-       "      <td>613.50</td>\n",
+       "      <th>$585-$629</th>\n",
+       "      <td>79.98</td>\n",
+       "      <td>82.31</td>\n",
+       "      <td>79.11%</td>\n",
+       "      <td>88.51%</td>\n",
+       "      <td>70.94%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>$615 - $644</th>\n",
-       "      <td>79.554073</td>\n",
-       "      <td>82.145823</td>\n",
-       "      <td>3171.25</td>\n",
-       "      <td>3713.75</td>\n",
-       "      <td>2677.75</td>\n",
+       "      <th>$630-$644</th>\n",
+       "      <td>77.82</td>\n",
+       "      <td>81.30</td>\n",
+       "      <td>70.62%</td>\n",
+       "      <td>82.60%</td>\n",
+       "      <td>58.84%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>&gt;$644</th>\n",
-       "      <td>79.554073</td>\n",
-       "      <td>82.145823</td>\n",
-       "      <td>2038.75</td>\n",
-       "      <td>2496.75</td>\n",
-       "      <td>1647.75</td>\n",
+       "      <th>&gt;$645</th>\n",
+       "      <td>77.05</td>\n",
+       "      <td>81.01</td>\n",
+       "      <td>66.23%</td>\n",
+       "      <td>81.11%</td>\n",
+       "      <td>53.53%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Average Math Score  Average Reading Score  % Passing Math  \\\n",
-       "spending_bins                                                              \n",
-       "<$585                   79.554073              82.145823         1491.75   \n",
-       "$585 - $614             79.554073              82.145823          640.75   \n",
-       "$615 - $644             79.554073              82.145823         3171.25   \n",
-       ">$644                   79.554073              82.145823         2038.75   \n",
+       "                    Average Math Score  Average Reading Score % Passing Math  \\\n",
+       "Per Student Budget                                                             \n",
+       "<$585                            83.36                  83.96         93.70%   \n",
+       "$585-$629                        79.98                  82.31         79.11%   \n",
+       "$630-$644                        77.82                  81.30         70.62%   \n",
+       ">$645                            77.05                  81.01         66.23%   \n",
        "\n",
-       "               % Passing Reading  Overall Passing Rate  \n",
-       "spending_bins                                           \n",
-       "<$585                    1539.25               1443.00  \n",
-       "$585 - $614               652.75                613.50  \n",
-       "$615 - $644              3713.75               2677.75  \n",
-       ">$644                    2496.75               1647.75  "
+       "                   % Passing Reading Overall Passing Rate  \n",
+       "Per Student Budget                                         \n",
+       "<$585                         96.69%               90.64%  \n",
+       "$585-$629                     88.51%               70.94%  \n",
+       "$630-$644                     82.60%               58.84%  \n",
+       ">$645                         81.11%               53.53%  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,14 +1548,14 @@
     "\n",
     "\n",
     "#grouping by spending \n",
-    "spending_grouped = school_data_complete.groupby(\"Spending Ranges (Per Student)\").mean()\n",
+    "spending_grouped = school_data_complete.groupby(\"Spending Ranges (Per Student)\")\n",
     "\n",
     "\n",
-    "average_math = spending_grouped[\"math_score\"].mean()\n",
-    "average_reading = spending_grouped[\"reading_score\"].mean()\n",
-    "percent_pass_math = school_data_complete[school_data_complete[\"math_score\"]>= 70].groupby(\"spending_bins\")[\"Student ID\"].count()/spending_grouped[\"Student ID\"].count()\n",
-    "percent_pass_rdg = school_data_complete[school_data_complete[\"reading_score\"]>= 70].groupby(\"spending_bins\")[\"Student ID\"].count()/spending_grouped[\"Student ID\"].count()\n",
-    "percent_overall = school_data_complete[(school_data_complete[\"math_score\"]>= 70) & (school_data_complete[\"reading_score\"]>= 70)].groupby(\"spending_bins\")[\"Student ID\"].count()/spending_grouped[\"Student ID\"].count()\n",
+    "average_math = round(spending_grouped[\"math_score\"].mean(),2)\n",
+    "average_reading = round(spending_grouped[\"reading_score\"].mean(),2)\n",
+    "percent_pass_math = round(school_data_complete[school_data_complete[\"math_score\"]>= 70].groupby(\"Spending Ranges (Per Student)\")[\"Student ID\"].count()/spending_grouped[\"Student ID\"].count()*100, 2).map(\"{:,.2f}%\".format)\n",
+    "percent_pass_rdg = round(school_data_complete[school_data_complete[\"reading_score\"]>= 70].groupby(\"Spending Ranges (Per Student)\")[\"Student ID\"].count()/spending_grouped[\"Student ID\"].count()*100, 2).map(\"{:,.2f}%\".format)\n",
+    "percent_overall = round(school_data_complete[(school_data_complete[\"math_score\"]>= 70) & (school_data_complete[\"reading_score\"]>= 70)].groupby(\"Spending Ranges (Per Student)\")[\"Student ID\"].count()/spending_grouped[\"Student ID\"].count()*100, 2).map(\"{:,.2f}%\".format)\n",
     "\n",
     "scores_spending = pd.DataFrame({\n",
     "    \"Average Math Score\": average_math, \n",
@@ -1565,11 +1565,11 @@
     "    \"Overall Passing Rate\": percent_overall\n",
     "})\n",
     "\n",
-    "#scores_spending.index.name = \"Per Student Budget\"\n",
-    "#scores_spending = scores_spending.reindex(bin_names)\n",
+    "scores_spending.index.name = \"Per Student Budget\"\n",
+    "scores_spending = scores_spending.reindex(bin_names)\n",
     "\n",
     "\n",
-    "scores_spending"
+    "scores_spending\n"
    ]
   },
   {
