--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
        "      <td>90.64%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>$585-$629</th>\n",
+       "      <th>$585-$630</th>\n",
        "      <td>79.98</td>\n",
        "      <td>82.31</td>\n",
        "      <td>79.11%</td>\n",
@@ -1500,7 +1500,7 @@
        "      <td>70.94%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>$630-$644</th>\n",
+       "      <th>$630-$645</th>\n",
        "      <td>77.82</td>\n",
        "      <td>81.30</td>\n",
        "      <td>70.62%</td>\n",
@@ -1523,19 +1523,19 @@
        "                    Average Math Score  Average Reading Score % Passing Math  \\\n",
        "Per Student Budget                                                             \n",
        "<$585                            83.36                  83.96         93.70%   \n",
-       "$585-$629                        79.98                  82.31         79.11%   \n",
-       "$630-$644                        77.82                  81.30         70.62%   \n",
+       "$585-$630                        79.98                  82.31         79.11%   \n",
+       "$630-$645                        77.82                  81.30         70.62%   \n",
        ">$645                            77.05                  81.01         66.23%   \n",
        "\n",
        "                   % Passing Reading Overall Passing Rate  \n",
        "Per Student Budget                                         \n",
        "<$585                         96.69%               90.64%  \n",
-       "$585-$629                     88.51%               70.94%  \n",
-       "$630-$644                     82.60%               58.84%  \n",
+       "$585-$630                     88.51%               70.94%  \n",
+       "$630-$645                     82.60%               58.84%  \n",
        ">$645                         81.11%               53.53%  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1543,7 +1543,7 @@
    "source": [
     "#bins for spending  \n",
     "bins = [0, 585, 630, 645, 680]\n",
-    "bin_names = [\"<$585\", \"$585-$629\", \"$630-$644\", \">$645\"]\n",
+    "bin_names = [\"<$585\", \"$585-$630\", \"$630-$645\", \">$645\"]\n",
     "school_data_complete['Spending Ranges (Per Student)'] = pd.cut(school_data_complete['budget']/school_data_complete['size'], bins, labels = bin_names)\n",
     "\n",
     "\n",
@@ -1588,12 +1588,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>Overall Passing Rate</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Small (&lt;1000)</th>\n",
+       "      <td>83.83</td>\n",
+       "      <td>83.97</td>\n",
+       "      <td>93.95%</td>\n",
+       "      <td>96.04%</td>\n",
+       "      <td>90.14%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium (1,000-2,000)</th>\n",
+       "      <td>83.37</td>\n",
+       "      <td>83.87</td>\n",
+       "      <td>93.62%</td>\n",
+       "      <td>96.77%</td>\n",
+       "      <td>90.62%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Large (2,000-5,000)</th>\n",
+       "      <td>77.48</td>\n",
+       "      <td>81.20</td>\n",
+       "      <td>68.65%</td>\n",
+       "      <td>82.13%</td>\n",
+       "      <td>56.57%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Average Math Score  Average Reading Score  \\\n",
+       "School Size                                                       \n",
+       "Small (<1000)                      83.83                  83.97   \n",
+       "Medium (1,000-2,000)               83.37                  83.87   \n",
+       "Large (2,000-5,000)                77.48                  81.20   \n",
+       "\n",
+       "                     % Passing Math % Passing Reading Overall Passing Rate  \n",
+       "School Size                                                                 \n",
+       "Small (<1000)                93.95%            96.04%               90.14%  \n",
+       "Medium (1,000-2,000)         93.62%            96.77%               90.62%  \n",
+       "Large (2,000-5,000)          68.65%            82.13%               56.57%  "
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#bins for grouping by school size \n",
+    "bins = [0, 1000, 2000, 5000]\n",
+    "bin_names = [\"Small (<1000)\", \"Medium (1,000-2,000)\", \"Large (2,000-5,000)\"]\n",
+    "school_data_complete[\"School Size\"] = pd.cut(school_data_complete['size'], bins, labels = bin_names)\n",
+    "\n",
+    "\n",
+    "#grouping by spending \n",
+    "school_size = school_data_complete.groupby(\"School Size\")\n",
+    "\n",
+    "school_size\n",
+    "\n",
+    "#calculations and formatting \n",
+    "average_math = round(school_size[\"math_score\"].mean(),2)\n",
+    "average_reading = round(school_size[\"reading_score\"].mean(),2)\n",
+    "percent_pass_math = round(school_data_complete[school_data_complete[\"math_score\"]>= 70].groupby(\"School Size\")[\"Student ID\"].count()/school_size[\"Student ID\"].count()*100, 2).map(\"{:,.2f}%\".format)\n",
+    "percent_pass_rdg = round(school_data_complete[school_data_complete[\"reading_score\"]>= 70].groupby(\"School Size\")[\"Student ID\"].count()/school_size[\"Student ID\"].count()*100, 2).map(\"{:,.2f}%\".format)\n",
+    "percent_overall = round(school_data_complete[(school_data_complete[\"math_score\"]>= 70) & (school_data_complete[\"reading_score\"]>= 70)].groupby(\"School Size\")[\"Student ID\"].count()/school_size[\"Student ID\"].count()*100, 2).map(\"{:,.2f}%\".format)\n",
+    "\n",
+    "scores_size = pd.DataFrame({\n",
+    "    \"Average Math Score\": average_math, \n",
+    "    \"Average Reading Score\": average_reading, \n",
+    "    \"% Passing Math\": percent_pass_math, \n",
+    "    \"% Passing Reading\": percent_pass_rdg, \n",
+    "    \"Overall Passing Rate\": percent_overall\n",
+    "})\n",
+    "\n",
+    "scores_size\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1611,10 +1726,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-151-0bcb1b3ff342>, line 19)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-151-0bcb1b3ff342>\"\u001b[0;36m, line \u001b[0;32m19\u001b[0m\n\u001b[0;31m    by_type = by_type [[\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Grouping by type of school  \n",
+    "group_by_type = school_data_complete.groupby(\"type\")\n",
+    "\n",
+    "#Calculations \n",
+    "average_math = round(group_by_type[\"math_score\"].mean(),2)\n",
+    "average_reading = round(group_by_type[\"reading_score\"].mean(),2)\n",
+    "percent_pass_math = round(school_data_complete[school_data_complete[\"math_score\"]>= 70].groupby(\"type\")[\"Student ID\"].count()/group_by_type[\"Student ID\"].count()*100, 2).map(\"{:,.2f}%\".format)\n",
+    "percent_pass_rdg = round(school_data_complete[school_data_complete[\"reading_score\"]>= 70].groupby(\"type\")[\"Student ID\"].count()/group_by_type[\"Student ID\"].count()*100, 2).map(\"{:,.2f}%\".format)\n",
+    "percent_overall = round(school_data_complete[(school_data_complete[\"math_score\"]>= 70) & (school_data_complete[\"reading_score\"]>= 70)].groupby(\"type\")[\"Student ID\"].count()/group_by_type[\"Student ID\"].count()*100, 2).map(\"{:,.2f}%\".format)\n",
+    "\n",
+    "by_type = pd.DataFrame({\n",
+    "   \n",
+    "    \"Average Math Score\": average_math, \n",
+    "    \"Average Reading Score\": average_reading, \n",
+    "    \"% Passing Math\": percent_pass_math, \n",
+    "    \"% Passing Reading\": percent_pass_rdg, \n",
+    "    \"Overall Passing Rate\": percent_overall\n",
+    "})\n",
+    " \n",
+    "    by_type = by_type [[\n",
+    "     \"Average Math Score\", \n",
+    "     \"Average Reading Score\", \n",
+    "     \"% Passing Math\", \n",
+    "     \"% Passing Reading\", \n",
+    "     \"Overall Passing Rate\"\n",
+    " ]]\n",
+    "\n",
+    "by_type\n"
+   ]
   },
   {
    "cell_type": "code",
